fixtures/bad/var_names_lower_snake_bad.sv
`default_nettype none

module var_lower_snake_violation;
  int BadVar;
  initial BadVar = 0;
endmodule

`default_nettype wire
